--- a/frontend/forms/obs.qrc
+++ b/frontend/forms/obs.qrc
@@ -18,6 +18,7 @@
     <file>images/down.svg</file>
     <file>images/up.svg</file>
     <file>images/obs.png</file>
+    <file>images/startup-splash-image-rounded_02.png</file>
     <file>images/obs_macos.svg</file>
     <file>images/obs_paused.png</file>
     <file>images/obs_paused_macos.svg</file>
@@ -96,3 +97,4 @@
     <file>fonts/OpenSans-Italic.ttf</file>
   </qresource>
 </RCC>
+
